--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <p class="footer">For more information, visit
             <a href="https://www.rspcansw.org.au/" target="_blank">RSPCA website.</a></span>
         </p>
+        <a href="page1.html">
+            <button>Meet our fur friends</button>
+        </a>
+
 
 
 
